--- a/angular/src/app/watch-list-view/watch-list-view.component.html
+++ b/angular/src/app/watch-list-view/watch-list-view.component.html
@@ -5,7 +5,10 @@
   <button mat-raised-button color="primary" (click)="detailsDialog()">Add Movie</button>
 </div>
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-
+  <ng-container matColumnDef="id">
+    <th mat-header-cell *matHeaderCellDef> Episodes </th>
+    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+  </ng-container>
   <!-- Title Column -->
   <ng-container matColumnDef="title">
     <th mat-header-cell *matHeaderCellDef> Title </th>
@@ -21,13 +24,13 @@
   <!-- Info url Column -->
   <ng-container matColumnDef="infoUrl">
     <th mat-header-cell *matHeaderCellDef> Info url </th>
-    <td mat-cell *matCellDef="let element"> {{element. infoUrl}} </td>
+    <td mat-cell *matCellDef="let element"> <a href="{{element. infoUrl}} " target="_blank">Movie info</a> </td>
   </ng-container>
 
   <!-- Watch url Column -->
   <ng-container matColumnDef="watchUrl">
     <th mat-header-cell *matHeaderCellDef> Watch url </th>
-    <td mat-cell *matCellDef="let element"> {{element.watchUrl}} </td>
+    <td mat-cell *matCellDef="let element"> <a href="{{element.watchUrl}} " target="_blank">watch url</a> </td>
   </ng-container>
 
   <!-- Action Column -->
